<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_purple"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".ui.auth.choice.ChoiceFragment">

    <LinearLayout
        android:id="@+id/layout_welcoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:orientation="horizontal"
        tools:alpha="100">

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Welcome, John Doe"
            android:textColor="@color/white"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:alpha="0"
        android:text="@string/choose_act"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        tools:alpha="100" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_host"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="16dp"
        android:alpha="0"
        android:backgroundTint="@color/blue"
        android:text="@string/host"
        android:textAllCaps="false"
        app:cornerRadius="18dp"
        app:rippleColor="@android:color/darker_gray"
        tools:alpha="100" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_visitor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:alpha="0"
        android:backgroundTint="@color/blue"
        android:text="@string/visitor"
        android:textAllCaps="false"
        app:cornerRadius="18dp"
        app:rippleColor="@android:color/darker_gray"
        tools:alpha="100" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50dp"
        android:alpha="0"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/log_out"
        android:textAllCaps="false"
        app:cornerRadius="18dp"
        app:rippleColor="@android:color/darker_gray"
        tools:alpha="100" />

</LinearLayout>