<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_purple"
    tools:context=".ui.auth.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="32dp">

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/jukee_logo" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:alpha="0"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="32sp"
            android:textStyle="bold"
            tools:alpha="100" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:alpha="0"
            android:background="@drawable/background_round"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:textSize="14sp"
            android:transitionName="email"
            tools:alpha="100" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:alpha="0"
            android:background="@drawable/background_round"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingHorizontal="24dp"
            android:paddingVertical="12dp"
            android:textSize="14sp"
            android:transitionName="password"
            tools:alpha="100" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0"
            android:backgroundTint="@color/blue"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textSize="14sp"
            app:cornerRadius="18dp"
            app:rippleColor="@android:color/darker_gray"
            tools:alpha="100" />

        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:alpha="0"
            android:gravity="center"
            android:orientation="horizontal"
            tools:alpha="100">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/didn_t_have_an_account"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btn_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="8dp"
                android:text="Register"
                android:textColor="@android:color/holo_blue_dark"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>